--- a/user/src/main/resources/application.properties
+++ b/user/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/form
 spring.datasource.username=root
-spring.datasource.password=password1234
+spring.datasource.password=Labonita2012
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
