--- a/user/src/main/resources/application.properties
+++ b/user/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/form
-spring.datasource.username=root
-spring.datasource.password=Labonita2012
+spring.datasource.url=dburl
+spring.datasource.username=user
+spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
@@ -14,3 +14,6 @@ spring.security.cors.max-age=3600
 spring.security.cors.allow-methods=GET,POST,PUT,DELETE
 spring.mvc.message-converters=
     org.springframework.http.converter.FormHttpMessageConverter
+
+# spring.mvc.view.prefix=/templates/
+# spring.mvc.view.suffix=.html
